--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "nyc --reporter=html ava -v && nyc report",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint .",
-    "postinstall": "npm run build"
+    "postinstall": "postinstall-build dist 'npm run build'"
   },
   "keywords": [
     "drupal",
@@ -28,7 +28,8 @@
   ],
   "dependencies": {
     "axios": "^0.11.0",
-    "drupal-api": "^0.0.3"
+    "drupal-api": "^0.0.3",
+    "postinstall-build": "^0.2.1"
   },
   "devDependencies": {
     "ava": "^0.15.1",
