--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
   ],
   "dependencies": {
     "axios": "^0.11.0",
-    "drupal-api": "^0.0.3"
-  },
-  "devDependencies": {
+    "drupal-api": "^0.0.3",
     "ava": "^0.15.1",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
